--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/IgnacioChalub/riders-server/issues"
   },
-  "homepage": "https://github.com/IgnacioChalub/riders-server#readme"
+  "homepage": "https://github.com/IgnacioChalub/riders-server#readme",
+  "dependencies": {
+    "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  }
 }
