--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "clear && tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,10 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
