--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "pg": "^8.7.3",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.0"
+    "socket.io": "^4.4.1",
+    "typeorm": "^0.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
