--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
